--- a/index.html
+++ b/index.html
@@ -2,116 +2,69 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sagar world</title>
+    <title>Apni kaksha | Home</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        h3{
-            color: yellow;
-        }
-    </style>
 </head>
 <body>
-    <h1> Welcome to Sagar world &lt;&Backslash;h1&gt;</h1>>
-    <h2 style="color:blue;"> Welcome to Sagar world</h2>
-    <h3> Welcome to Sagar world</h3>
+    <header>
+        <h1>Apni Kaksha</h1>
+    </header>
+    <nav> 
+        <a href="#">Home</a>
+        <a href="#">College review</a>
+        <a href="#">Course</a>
+        <a href="#">Study Material</a>
+        <a href="#">Login/signup</a>
+    </nav>
+    <main>
+        <section>
+            <h2>Courses</h2>
+            <video src="video/Asphalt 9_ Legends 2022-11-12 12-35-56.mp4" width="33%"  controls ></video>
+            <video src="video/Asphalt 9_ Legends 2022-11-12 12-35-56.mp4" width="33%"  controls ></video>
+            <video src="video/Asphalt 9_ Legends 2022-11-12 12-35-56.mp4" width="33%"  controls ></video>
+            <br>
+            <br>
+            <br>
+            <video src="video/Asphalt 9_ Legends 2022-11-12 12-35-56.mp4" width="33%"  controls ></video>
+            <video src="video/Asphalt 9_ Legends 2022-11-12 12-35-56.mp4" width="33%"  controls ></video>
+            <video src="video/Asphalt 9_ Legends 2022-11-12 12-35-56.mp4" width="33%"  controls ></video>
+        </section>
+        <section>
+            <h2>College Review</h2>
+            <iframe width="33%" src="https://www.youtube.com/embed/zGJ5BlbKfLM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="33%" src="https://www.youtube.com/embed/zGJ5BlbKfLM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="33%" src="https://www.youtube.com/embed/WCBV-C703YE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </section>
+        <section>
+            <h2>Study Material</h2>
+            <a target="_blank" href="Notes/SQL Practice Questions.pdf"><img src="Image/sagar.jpg" alt="" width="24%" height="60%" ></a>
+            <a target="_blank" href="Notes/SQL Practice Questions.pdf"><img src="Image/sagar.jpg" alt="" width="24%" height="60%" ></a>
+            <a target="_blank" href="Notes/SQL Practice Questions.pdf"><img src="Image/sagar.jpg" alt="" width="24%" height="60%" ></a>
+        </section>
+        <h2>
+            Our founder
+        </h2>
+        <img src="Image/res.jpg" alt="This is Sagar Gupta" width="300">
+        <h3>Sagar Gupta</h3>
+        <a href="http://www.youtube.com/Sagarkashyap" target="_blank" rel="noopener noreferrer">youtube</a>&nbsp;
+        <a href="http://www.youtube.com/Sagarkashyap" target="_blank" rel="noopener noreferrer">Facebook</a>&nbsp;
+        <a href="http://www.youtube.com/Sagarkashyap" target="_blank" rel="noopener noreferrer">Instagram</a>
+        <h4>One of the fest of IIT Madras name paradox. I had a position
+            of Head of Safety and Security of whole fest in 2022 and
+            2023.
+            We with our 60 volunteers had conducted the whole fest
+            successfully.</h4>
+    </main>
+    <footer>
+        <h5>
+            <a href="#">FAQ</a>
+            <a href="#">Contact Us</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Refund policy</a>
+            <a href="#">Copyright</a>
+        </h5>
+    </footer>
     
-    <hr>
-    <p> <b>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</b> <i> Enim harum consectetur dolor rem in recusandae tempore cupiditate vitae,</i> porro <small>rovident consequatur temporibus impedit</small>laudantium animi deserunt nihil quibusdam amet quia error repellendus id! Odio 10 <sup>3</sup> voluptatum cumque 10 <sub>5</sub>fugiat veritatis odit distinctio, dicta non ipsa expedita, rem atque optio qui dolores quod?</p>
-    </p>
-
-    <hr>
-    <h2>Shopping list</h2>
-    <ul>
-        <ol type="1">
-        <li>Milk</li>
-        <li>Peanut Butter</li>
-        <li>Coffee</li>
-        <li>Maggie</li>
-        <li>Rusk</li>
-        <li>Bread</li>
-        <li>choco</li>
-    </ul>
-    <hr>
-    <h2>Maggie Recipee</h2>
-    <ol type="i">
-        <li> boil </li>
-        <li>break and half</li>
-        <li>add the maggie</li>
-        <li>Add some veggie:-
-            <ul>
-                <ol type="a">
-                <li>peas</li>
-                <li>potato</li>
-                <li>beans<li>
-            </ul>
-        <li>cook</li>
-        <li>Maggie ready</li>
-    </ol>
-    <h2>NOTES</h2>
-    <a href="https://drive.google.com/drive/my-drive" target="_blank"> BDM</a>
-    <br>
-    <a href="https://www.google.com"target='_blank'>google</a>
-    <br>
-    <a href="page2.html"> Page 2 pe </a>
-    <br>
-    <a href="Notes/SQL Practice Questions.pdf" targer="_blank">SQL Questions</a>
-    <br>
-    <a href="Notes/id card.pdf" target="_blank">My IDCARD</a>
-    <br>
-    <a href="Notes/SAGAR GUPTA_BDM_Authorization_letter.pdf" target="_blank">BDM latter</a>
-    <img src="Image/res.jpg" alt="This is an image"width="350">
-    <hr>
-    <video src="video/Asphalt 9_ Legends 2022-11-12 12-35-56.mp4" width="450" autoplay></video> 
-    <video src="video/Asphalt 9_ Legends 2022-11-12 12-35-56.mp4" width="400" controls loop muted poster="Image/res.jpg"></video>
-    <hr>
-
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/2QR11oDukn4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-    
-    <iframe src="https://www.apnikaksha.com" frameborder="1" height="150" widht="250">
-    <hr>
-    <table>
-        <thead>
-            <tr>
-                <th>Subject</th>
-                <th>Theory</th>
-                <th>practical</th>
-                <th>total marks</th>
-                <th>grade</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>english</td>
-                <td>75</td>
-                <td>25</td>
-                <td>100</td>
-                <td>A</td>
-            </tr>
-            <tr>
-                <td>math</td>
-                <td>45</td>
-                <td>55</td>
-                <td>100</td>
-                <td>B</td>
-            </tr>
-            <tr>
-                <td>Physics</td>
-                <td>7</td>
-                <td>30</td>
-                <td>100</td>
-                <td>C</td>
-            </tr>
-            <tr>
-                <td>chemistry</td>
-                <td>78</td>
-                <td>22</td>
-                <td>100</td>
-                <td>E</td>
-            </tr>
-        </tbody>
-    </table>
 </body>
 </html>
